--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ font-family: Georgia, 'Times New Roman', Times, serif;
 text-align: justify;
 background:#3e445f; 
 }
+a{
+    color:#9cadff
+}
 nav{
     background: #757ea8c5;
     width: 1200px;
