--- a/style.css
+++ b/style.css
@@ -346,6 +346,15 @@ span{
       }
       
   }
+  @media(max-width:364px){
+    #pog{
+        position: relative;
+        left:0.2cm
+    }
+    #Yt_{
+        margin-left:0.5cm
+    }
+  }
   @media(max-width:314px){
     main{
         background:  #67709E;
